<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@drawable/list_item_background"
    android:maxHeight="290dp"
    android:minHeight="160dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/list_item_photo_width"
            android:layout_height="@dimen/list_item_photo_height"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/nophoto" />

        <TextView
            android:id="@+id/title_text_product_buy_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_space_medium"
            android:background="@drawable/button_custom"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:padding="@dimen/list_item_space_small"
            android:text="@string/title_buy_one"
            android:textColor="@color/ListText"
            android:textSize="@dimen/list_item_text_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/list_item_space_medium"
        android:layout_marginRight="@dimen/list_item_space_medium"
        android:layout_marginTop="@dimen/list_item_space_medium"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_item_space_small"
            android:text="@string/title_name"
            android:textColor="@color/ListText"
            android:textSize="@dimen/list_item_text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_product_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_item_space_small"
            android:textColor="@color/ListText"
            android:text="@string/title_cat"
            android:textSize="@dimen/list_item_text_small" />

        <!-- price section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/list_item_space_small"
                android:layout_marginRight="@dimen/list_item_space_small"
                android:text="@string/title_price"
                android:textColor="@color/ListText"
                android:textSize="@dimen/list_item_text_small" />

            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/list_item_space_small"
                android:layout_marginRight="@dimen/list_item_space_small"
                android:text="-"
                android:textColor="@color/ListText"
                android:textSize="@dimen/list_item_text_small" />

            <TextView
                android:id="@+id/title_text_product_carrency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/list_item_space_small"
                android:text="@string/title_carrency"
                android:textColor="@color/ListText"
                android:textSize="@dimen/list_item_text_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_text_product_available"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/list_item_space_small"
                    android:layout_marginRight="@dimen/list_item_space_big"
                    android:text="@string/title_available"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/list_item_text_small" />

                <TextView
                    android:id="@+id/text_product_available"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/list_item_space_small"
                    android:layout_marginRight="@dimen/list_item_space_small"
                    android:text="10"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/list_item_text_small" />

            </LinearLayout>

        </LinearLayout>

        <!-- supplier section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text_product_supplier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/list_item_space_big"
                android:gravity="center_vertical"
                android:text="@string/title_supplier"
                android:textColor="@color/ListText"
                android:textSize="@dimen/list_item_text_small" />

            <TextView
                android:id="@+id/text_product_supplier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/list_item_space_medium"
                android:gravity="center_vertical"
                android:text="test"
                android:textColor="@color/ListText"
                android:textSize="@dimen/list_item_text_small" />

            <ImageView
                android:id="@+id/supplier_store_button"
                android:layout_width="@dimen/list_item_space_extreme_big"
                android:layout_height="@dimen/list_item_space_extreme_big"
                android:clickable="true"
                android:src="@drawable/store" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>